[gd_scene load_steps=13 format=3 uid="uid://dkqbyp3078p5i"]

[ext_resource type="Script" path="res://World/Objects/Tiles/TileObjectHurtBox.gd" id="1_gmkx7"]
[ext_resource type="Texture2D" uid="uid://bt8wejlwv77xj" path="res://Assets/Images/Misc/light.png" id="2"]
[ext_resource type="Script" path="res://World/Objects/Scripts/InteractiveArea.gd" id="2_rsvx5"]
[ext_resource type="SpriteFrames" uid="uid://pg8l86hoqsip" path="res://Assets/Images/Animations/chest/wood/up.tres" id="5"]

[sub_resource type="RectangleShape2D" id="16"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(15, 14)

[sub_resource type="CircleShape2D" id="18"]
radius = 15.0

[sub_resource type="CircleShape2D" id="2"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="17"]
size = Vector2(50, 30)

[sub_resource type="Animation" id="19"]
resource_name = "shake"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestPos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 0), Vector2(-2, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36o8j"]
_data = {
"shake": SubResource("19")
}

[node name="TileObjectHurtBox" type="Node2D"]
script = ExtResource("1_gmkx7")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8, -8)

[node name="StaticBody2D" type="StaticBody2D" parent="Marker2D"]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/StaticBody2D"]
shape = SubResource("16")
disabled = true

[node name="InteractiveArea" type="Area2D" parent="Marker2D"]
position = Vector2(0, 4)
collision_layer = 0
collision_mask = 131072
script = ExtResource("2_rsvx5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/InteractiveArea"]
shape = SubResource("4")
disabled = true

[node name="CampfireInteractiveArea" type="Area2D" parent="Marker2D"]
collision_layer = 0
collision_mask = 131072
script = ExtResource("2_rsvx5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/CampfireInteractiveArea"]
shape = SubResource("18")
disabled = true

[node name="DetectObjectOverPathBox" type="Area2D" parent="Marker2D"]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/DetectObjectOverPathBox"]
shape = SubResource("2")

[node name="HurtBox" type="Area2D" parent="Marker2D"]
collision_layer = 262168
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/HurtBox"]
light_mask = 0
shape = SubResource("1")

[node name="BedInteractiveArea" type="Area2D" parent="Marker2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 131072
script = ExtResource("2_rsvx5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/BedInteractiveArea"]
shape = SubResource("17")
disabled = true

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
volume_db = -16.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(8, -8)
enabled = false
color = Color(1, 0.921569, 0.921569, 1)
energy = 1.07
shadow_enabled = true
texture = ExtResource("2")

[node name="FurnaceSmoke" type="Node2D" parent="."]
visible = false
position = Vector2(7, -55)

[node name="P1" type="CPUParticles2D" parent="FurnaceSmoke"]
lifetime = 2.0
direction = Vector2(0, -1)
gravity = Vector2(0, -20)
initial_velocity_min = 1.0
initial_velocity_max = 4.0

[node name="P2" type="CPUParticles2D" parent="FurnaceSmoke"]
lifetime = 2.0
direction = Vector2(0, -1)
gravity = Vector2(0, -20)
initial_velocity_min = 1.0
initial_velocity_max = 4.0
color = Color(0.619608, 0.619608, 0.619608, 1)

[node name="P3" type="CPUParticles2D" parent="FurnaceSmoke"]
lifetime = 2.0
direction = Vector2(0, -1)
gravity = Vector2(0, -20)
initial_velocity_min = 1.0
initial_velocity_max = 4.0
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_36o8j")
}

[node name="ChestPos" type="Node2D" parent="."]

[node name="Chest" type="AnimatedSprite2D" parent="ChestPos"]
visible = false
sprite_frames = ExtResource("5")
animation = &"open"

[node name="ResetTempHealthTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Marker2D/DetectObjectOverPathBox" to="." method="_on_DetectObjectOverPathBox_area_entered"]
[connection signal="area_exited" from="Marker2D/DetectObjectOverPathBox" to="." method="_on_DetectObjectOverPathBox_area_exited"]
[connection signal="area_entered" from="Marker2D/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="ResetTempHealthTimer" to="." method="_on_ResetTempHealthTimer_timeout"]
